sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var k=getNombreValeurs()-2
  for (i <- 1 to getNombreValeurs()-2){
    if (plusPetit(i+1,i)){
      echange(i,i+1)
    }
  }
  while (k>0){
    if (plusPetit(k+1,k)){
      echange(k,k+1)
    }
    i=i-1
  }
}